Add Energy Generators

--- a/src/modules/extendedCallWindow/i18n/en_US.json
+++ b/src/modules/extendedCallWindow/i18n/en_US.json
@@ -319,7 +319,12 @@
             },
             {
                 "equipment": ["energy_supply"],
-                "texts": ["Energy Supplie", "Energy Supplies"],
+                "texts": [
+                    "Energy Supplie",
+                    "Energy Supplies",
+                    "Energy Generator",
+                    "Energy Generators"
+                ],
                 "vehicles": [94]
             },
             {
